# datatrac

./: .gitignore  CODING_STANDARDS.md  README.md  config.yaml  docker-compose.test.yml  go.mod  go.sum  index.html  main.go  package-lock.json  package.json
api/: credential_api.go  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: error_logger_usage.rs  progress_monitor_usage.rs
src-tauri/src/: commands.rs  crypto.rs  datasource.rs  error_logger.rs  lib.rs  main.rs  progress.rs  progress_logger.rs  task_manager.rs  type_mapper.rs
src-tauri/src/commands/: datasource.rs  mod.rs  sync.rs  task.rs
src-tauri/src/core/: logger.rs  mod.rs  monitor.rs
src-tauri/src/exchange/: mod.rs
src-tauri/src/exchange/core/: data_record.rs  factory.rs  mod.rs  pipeline.rs  plugin.rs  reader.rs  transformer.rs  writer.rs
src-tauri/src/exchange/readers/: elasticsearch.rs  mod.rs  mysql.rs
src-tauri/src/exchange/transformers/: mod.rs
src-tauri/src/exchange/writers/: elasticsearch.rs  mod.rs  mysql.rs
src-tauri/src/services/: mod.rs  sync.rs
src-tauri/src/services/datasource/: elasticsearch.rs  mod.rs  mysql.rs
src-tauri/src/services/task/: deduplication.rs  mod.rs  scheduler.rs  state_sync.rs
src-tauri/src/storage/: datasource.rs  mod.rs  models.rs  sync_task_ops.rs  synced_index.rs  task.rs  task_config.rs  task_unit.rs  task_unit_new_ops.rs
src-tauri/src/sync_engine/: es_sync.rs  mod.rs  mod.rs.backup  mysql_sync.rs  mysql_to_es_impl.rs  other_sync_impl.rs  state_manager.rs  types.rs  utils.rs
src-tauri/src/utils/: crypto.rs  mod.rs  type_mapper.rs
(+247 files in other folders)
