[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# 数据库和异步运行时
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "sqlite", "chrono"] }
tokio = { version = "1.35", features = ["full"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

# Elasticsearch 客户端
elasticsearch = "8.19.0-alpha.1"
url = "2.5"

# 加密
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
dirs = "5.0"

# 工具库
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
futures = "0.3.31"

